--- a/public/500.html
+++ b/public/500.html
@@ -1,26 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>We're sorry, but something went wrong (500)</title>
-  <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
-  </style>
-</head>
-
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+    <meta charset=utf-8 /> 
+    <title>Enjoy Picture Everyday</title> 
+     <link rel="stylesheet" href="stylesheets/all.css" type="text/css" /> 
+</head> 
 <body>
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
-    <p>We've been notified about this issue and we'll take a look at it shortly.</p>
-  </div>
+<div id="wrapper">
+
+    <h1>EnjoyPicture.net</h1>
+
+	<div id="main">
+    	<div id="article"><a href="http://www.enjoypicture.net"><img src="images/0.jpg"/></a></div>
+        <div id="summary">
+        	We're sorry, but something went wrong
+        </div>
+        <div id="comments">
+        </div>
+    </div>
+</div>
 </body>
 </html>
+
