--- a/public/index-design.html
+++ b/public/index-design.html
@@ -3,34 +3,20 @@
 <head> 
     <meta charset=utf-8 /> 
     <title>Enjoy Picture Everyday</title> 
-     <link rel="stylesheet" href="stylesheets/base.css" type="text/css" /> 
-      <link rel="stylesheet" href="stylesheets/content_default.css" type="text/css" /> 
-       <link rel="stylesheet" href="stylesheets/iehacks.css" type="text/css" /> 
-    <link rel="stylesheet" href="stylesheets/style.css" type="text/css" /> 
+     <link rel="stylesheet" href="stylesheets/all.css" type="text/css" /> 
 </head> 
 <body>
 <div id="wrapper">
-  <div id="header">
-    	<h1>Enjoy Picture</h1>
-   	  <em>The best picture daily show. just enjoy yourself!</em> 
-        <nav>
-        <ul>
-        	<li><a href="#">Daily</a></li>
-            <li><a href="#">Random</a></li>
-            <li><a href="#">Tags</a></li>
-        </ul>
-        </nav>
-    </div>
+
+    <h1>We're sorry, but something went wrong.</h1>
+
 	<div id="main">
-    	<div id="article"><a href="#"><img src="http://farm6.static.flickr.com/5221/5597584828_8420ee4d69_z.jpg"/></a></div>
+    	<div id="article"><a href="http://www.enjoypicture.net"><img src="images/tiebet.jpg"/></a></div>
         <div id="summary">
         	The Phtote Title is Here 眼睛上天堂，心灵归故乡
         </div>
         <div id="comments">
         </div>
-    </div>
-    <div id="footer">
-    	
     </div>
 </div>
 </body>
