--- a/public/404.html
+++ b/public/404.html
@@ -1,26 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>The page you were looking for doesn't exist (404)</title>
-  <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
-  </style>
-</head>
-
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+    <meta charset=utf-8 /> 
+    <title>Enjoy Picture Everyday</title> 
+     <link rel="stylesheet" href="stylesheets/all.css" type="text/css" /> 
+</head> 
 <body>
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
-  </div>
+<div id="wrapper">
+
+   <h1>EnjoyPicture.net</h1>
+
+	<div id="main">
+    	<div id="article"><a href="http://www.enjoypicture.net"><img src="images/tiebet.jpg" width="500px"/></a></div>
+        <div id="summary" style="color:red;">
+        	Your request page is not exist
+        </div>
+        <div id="comments">
+        </div>
+    </div>
+</div>
 </body>
 </html>
+
